<resources>
    <string name="app_name">Proyecto 2</string>
    <string name="edtPassword">Password</string>
    <string name="edtUser">User</string>
    <string name="btnSave">Save</string>
    <string name="idInstrumento">ID</string>
    <string name="txtName">Name</string>
    <string name="txtYear">Year</string>
    <string name="txtValue">Value</string>
    <string name="opcNew">Add</string>
    <string name="opcContact">Contact</string>
    <string name="menu">Options menu</string>
    <string name="title_activity_anyadirelemento">Anyadirelemento</string>
    <string name="edtNameNew">Name</string>
    <string name="txtAdd">New instrument</string>
    <string name="edtYearNew">Year</string>
    <string name="btnSend">Send</string>
    <string name="txtDireccion">Address Street El barbero de Sevilla </string>
    <string name="txtPhone">+34617463574</string>
    <string name="txtCall">Phone Number:</string>
    <string name="btnCall">Call</string>
    <string name="txtEdit">Edit instrument</string>
    <string name="edtNameEdit">New name</string>
    <string name="edtYearEdit">New year</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="opcEdit">Edit</string>
    <string name="opcErase">Erase</string>
    <string name="btnEdit">Edit</string>
    <string name="msgDel">Delete instrument</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edtIdEdit">Id</string>
    <string name="Web">Web</string>
    <string name="btnMap">Map</string>
    <string name="subtitulo">Application designed to DIW</string>
    <string name="titulo">Instruments</string>
    <string name="mensajeError">Error in name or year</string>
    <string name="mensajeLogin">Error in login</string>
</resources>