<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.joseluis.proyectoevaluacion2.Main2Activity"
    android:orientation="vertical"
    android:background="@mipmap/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_floating_material_dark">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUser"
            android:layout_gravity="center_horizontal"
            android:hint="@string/edtUser"
            android:background="@color/background_floating_material_dark"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/edtPassword"
            android:background="@color/background_floating_material_dark"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
